# blue-noise-generator

./: .clang-format  .gitignore  .gitmessage  CMakeLists.txt  Dockerfile  LICENSE.md  README.md  test
.github/workflows/: docker-publish.yml  docker-push.yml  docker-test.yml
cmake/: CMakeLists.txt  Config.cmake.in  EnableTesting.cmake
src/: CMakeLists.txt  main.cpp
