CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
PROJECT( "generator" )

SET( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake $ENV{CMAKE_MODULE_PATH} )

SET( FLAGS )
SET( TYPE RelWithDebInfo )

SET( SRC src)
SET( INC include)
SET( THR thirdparty )

SET( PROJ_SOURCES
  ${SRC}/main.cpp
  )

SET( PROJ_HEADERS
  )

SET( THIRD_PARTY
  ${THR}/sse_mathfun.h
  )

SET( CMAKE_CXX_FLAGS ${FLAGS} )
SET( CMAKE_BUILD_TYPE ${TYPE} )

ADD_EXECUTABLE( ${CMAKE_PROJECT_NAME} ${PROJ_SOURCES} ${PROJ_HEADERS} )

FIND_PACKAGE( Boost COMPONENTS system REQUIRED )

INCLUDE_DIRECTORIES(
  ${INC}
  ${THR}
  ${Boost_INCLUDE_DIRS}
  )

TARGET_LINK_LIBRARIES( ${CMAKE_PROJECT_NAME}
  ${Boost_LIBRARIES}
  )