CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
PROJECT( "generator" )

SET( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake $ENV{CMAKE_MODULE_PATH} )

SET( FLAGS -march=native )
SET( TYPE RelWithDebInfo )

SET( DEFINITIONS -DUSE_SSE2 )

SET( SRC src)
SET( INC include)
SET( THR thirdparty )

SET( PROJ_SOURCES
  ${SRC}/main.cpp
  )

SET( PROJ_HEADERS
  )

SET( THIRD_PARTY
  ${THR}/ssemathfun/sse_mathfun.h
  )

SET( CMAKE_CXX_FLAGS ${FLAGS} )
SET( CMAKE_BUILD_TYPE ${TYPE} )

ADD_DEFINITIONS( ${DEFINITIONS} )

ADD_EXECUTABLE( ${CMAKE_PROJECT_NAME} ${PROJ_SOURCES} ${PROJ_HEADERS} )

FIND_PACKAGE( TBB REQUIRED )

INCLUDE_DIRECTORIES(
  ${INC}
  ${THR}
  ${TBB_INCLUDE_DIRS}
  )

TARGET_LINK_LIBRARIES( ${CMAKE_PROJECT_NAME}
  ${TBB_LIBRARIES}
  )